--- a/onlineform.html
+++ b/onlineform.html
@@ -33,7 +33,7 @@
           <h5>ZALORA <span>INDIA</span></h5>
         </div> -->
         <div class="form-text">
-          <p>All our customer service agents are offline now. I am a Bot, your ZALORA virtual assistant. No worries, I will try to help you as much as I can.</p>
+          <p>All our customer service agents are online now. I am a Bot, your ZALORA virtual assistant. No worries, I will try to help you as much as I can.</p>
         </div>
         <form class="main-form" action="" method="post">
           <div class="form-fields form-field-name"><label for="username">Name *</label><input type="text" name="username" id="username" value="" placeholder="enter your name" required/></div>
@@ -43,7 +43,7 @@
           <div class="form-fields form-field-submit"><input type="button" value="Agree and submit" onclick="return details()"></div>
         </form>
       </div>
-      <div class="hide" id="greeting" style="width: 100%; position: absolute; height: 80%;">
+      <div class="hide" id="greeting" style="width: 100%; position: absolute; height: 30%;">
             <div class="greeting col-lg-12 d-flex justify-content-center align-items-center" style="height: 100%;">
                 <p id="main2" class="">Thank you for the information</p>
             </div>
